public/app/styles/main.scss
$iconSpritePath: "../images/glyphicons-halflings.png";
$iconWhiteSpritePath: "../images/glyphicons-halflings-white.png";

@import "bootstrap-sass/lib/bootstrap";

$color-scheme:  3321TvCw0w0w0;

$tweet-border-width: 1px;
$tweet-border-dotted: $tweet-border-width dotted #e0e0e0;
$tweet-border-solid: $tweet-border-width solid #e0e0e0;
$background-color: #ffffff;
$tweet-background-color: #ffffff;
$tweet-background-hover-color: #f8f8f8;

$vote-button-side-padding: 20px;
$vote-button-vert-padding: 5px;
$tweet-glyph-size: 30px;
$deep-purple: #a166d5;
$aye-green: #62d7a5;
$light-aye-green: #a5ebcd;
$nay-red: #ff9c74;
$light-nay-red: #ffc8b3;
$settings-gray: #777777;
$tweet-padding: 5px;
$nontweet-tweet-column-padding: $tweet-padding + 2 * $tweet-border-width;

body {
    background: $background-color;
    font-family: "Open Sans", sans-serif;
    color: #333;
}

.container {
}

.tweet {
    padding-bottom: 5px;
}

.tweetColPadding {
    padding-left: $nontweet-tweet-column-padding;
    padding-right: $nontweet-tweet-column-padding;
}

.tweetStuff {
    background-color: $tweet-background-color;
    min-height: 74px; // voteButtons with their margin are 85, so 85 - 5 - 5 (top and bottom padding) - 1 (top border) = 74
    padding: $tweet-padding;
    border-top: $tweet-border-dotted;
    border-right: $tweet-border-dotted;
    border-bottom: $tweet-border-dotted;
    border-left: $tweet-border-dotted;
    overflow: auto; //necessary to prevent badge from protruding outside of tweetStuff box
}

.leftColumn {
    height: 100%;
    float: left;
}

.tweeterImage {
}

.tweeterImage > img {
    vertical-align: inherit;
}

.rightColumn {
    height: 100%;
    padding-left: 10px;
    overflow: hidden;
}

.tweetMeta {
    width: 100%;
    display: inline-block;
}

.tweeterName, .tweeterScreenName {
    float: left;
}

.tweetTimestamp {
    float: right;
}

.tweeterName {
    font-size: 14px;
    font-weight: bold;
    color: #000000;
}

.tweeterScreenName {
    vertical-align: bottom;
    color: #989898;
}

.tweeterScreenName:hover {
    text-decoration: underline;
}

.tweetTimestamp {
    padding-left: 15px;
}

.pvalue {
    padding-left: 8px;
}

.pvalue > .badge {
    background-color: #c7a9e1;
}

.tweetText {
    font-size: 14px;
    display: inline-block;
}

.tweetFooter {
    color: #989898;
    padding-top: 5px;
}

.retweetedStatus {
}

.tweetMeta, .tweetFooter {
    font-size: 12px;
    line-height: 14px;
}

.voteButtons {
    background-color: $tweet-background-color;
    border-right: $tweet-border-dotted;
    border-bottom: $tweet-border-dotted;
    border-left: $tweet-border-dotted;
    display: inline-block;
}

.voteAye {
    border-right: $tweet-border-dotted;
}

.voteAye, .voteNay {
    display: inline-block;
    width: 49%;
}

.aye, .nay {
    margin: 0 auto;
}

.aye {
    width: $tweet-glyph-size;
    height: $tweet-glyph-size;
    padding: $vote-button-vert-padding 0;
    font-size: $tweet-glyph-size;
}

a .aye {
    color: $aye-green;
}

.nay {
    width: $tweet-glyph-size;
    height: $tweet-glyph-size;
    padding: $vote-button-vert-padding 0;
    font-size: $tweet-glyph-size;
}

a .nay {
    color: $nay-red;
}

// necessary to remove underline which appears in gap between voteButtons due to their 49% width
.aVoteAye:hover, .aVoteNay:hover {
    text-decoration: none;
}

.wynnoButtons {
}

.nav.wynnoButtons li a {
    font-size: 25px;
    text-shadow: none;
}

.navbar .nav > li > a:hover {
    background-color: #f8f8f8;
}

.navbar .nav > .active > a,
.navbar .nav > .active > a:hover,
.navbar .nav > .active > a:focus {
    background-color: $background-color;
    border-bottom: 4px solid $deep-purple;
    box-shadow: none;
}

.navbar .nav > li.active > a {
    padding-bottom: 6px;
}

.navbar .navbar-brand {
    //font-family: "Maven Pro", sans-serif;
    //font-family: "Raleway Dots", sans-serif;
    font-family: "Ubuntu", sans-serif;
    padding-right: 0;
    padding-left: 30px;
    padding-bottom: 0;
    font-size: 32px;
    //font-weight: bold;
    line-height: 100%;
    color: $deep-purple;
    text-shadow: none;
}

.funnel {
    display: inline;
    font-size: 20px;
    padding-right: 16px
}

.w, .y, .biggern, .smallern, .o {
    background-color: #FFFFFF;
    display: inline
}

.w {
    font-size: 36px;
}

.y {
    font-size: 36px;
    color: $aye-green;
}

.biggern {
    font-size: 36px;
}

.smallern {
    font-size: 36px;
    color: $nay-red;
}

.o {
    font-size: 36px;
    //font-weight: bold;
}

.navbar-fixed-top .navbar-inner {
    -webkit-box-shadow: none;
    box-shadow: none;
}

.navbar-inner {
    //background-color: #f0f0f0;
    background-color: #ffffff;
    background-image: none;
    background-image: no-repeat;
    -webkit-box-shadow: none;
    box-shadow: none;
}

.navbar .nav > .passing > a,
.navbar .nav > .passing > a:hover {
    color: $aye-green;
}

.navbar .nav > .failing > a,
.navbar .nav > .failing > a:hover {
    color: $nay-red;
}

.navbar .navbar-btn {
    box-shadow: none;
    -webkit-box-shadow: none;
    background-image: none;
    text-shadow: none;
    border-color: $deep-purple;
    background-color: whitesmoke;
    margin-right: 15px; //necessary because body margin shrunk to 10px from 20px
}

.navbar .navbar-btn:hover {
    background-color: whitesmoke;
}

.navbar .navbar-btn:focus {
    background-color: #e6e6e6;
}

.navbar .navbar-btn .icon-bar {
    box-shadow: none;
    -webkit-box-shadow: none;
}

.navbar .navbar-btn .icon-bar.firstBar {
    background-color: $aye-green;
}

.navbar .navbar-btn .icon-bar.secondBar {
    background-color: $nay-red;
}

.navbar .navbar-btn .icon-bar.thirdBar {
    background-color: $aye-green;
}

.settingHeader {
    color: #ffffff;
    padding-left: 5px;
}

.protectedUser, .protectedWord, .mutedUser, .mutedWord {
    padding-left: 10px;
}

.protectedUsers .settingHeader, .protectedWords .settingHeader {
    background-color: $light-aye-green;
}

.mutedUsers .settingHeader, .mutedWords .settingHeader {
    background-color: $light-nay-red;
}

.protectedUsers, .protectedWords {
    border-left: 2px solid $aye-green;
}

.mutedUsers, .mutedWords {
    border-left: 2px solid $nay-red;
}

.innerSettingsBlock {
    margin-left: 10px;
}

.user, .word {
    display: inline;
    width: 180px;
}

.removeSetting {
    display: inline;
    font-size: 16px;
    color: #777777;
    background: transparent;
    border: 0;
}

.removeSetting:hover {
    color: #555555;
}

.settingInputContainer {
    padding-top: 10px;
    padding-left: 10px;
}

$twitterButtonRadius: 3px;

.signInContainer, .username {
    border: 1px solid #1dcaff;
    border-radius: $twitterButtonRadius;
}

.twitterBird {
    display: inline-block;
}

.signIn {
    display: inline-block;
    font-size: 12px;
}

.signIn:hover {
    background-color: #FFFFFF;
}

.refreshSpinnerContainer {
    display: inline-block;
    border: 1px solid #1dcaff;
    border-radius: $twitterButtonRadius;
    margin-bottom: 10px;
    padding: 3px;
}

.earlier {
    padding-top: 10px;
}

.refreshSpinnerContainer > a:hover {
    text-decoration: none;
}

.feedbackContainer {
    position: fixed;
    visibility: visible!important;
    cursor: pointer;
    bottom: 0;
    right: 2%;
    width: auto;
    border: 0;
    font-size: 14px;
    background: #383838;
    color: #FFFFFF;
    padding: 10px 10px;
    margin: 0;
    -webkit-border-radius: 5px 5px 0 0;
    -moz-border-radius: 5px 5px 0 0;
    border-radius: 5px 5px 0 0;
}

.feedback {
    padding-left: 6px;
    display: none;
}

@keyframes anim-rotate {
    from {
        transform: rotate(0);
        -ms-transform:rotate(0);
    }
    to {
        transform: rotate(360deg);
        -ms-transform:rotate(360deg);
    }
}

@-webkit-keyframes anim-rotate {
    from {
        -webkit-transform:rotate(0);
    }
    to {
        -webkit-transform:rotate(360deg);
    }
}

@keyframes anim-rotate-backward {
    from {
        transform: rotate(360deg);
        -ms-transform:rotate(360deg);
    }
    to {
        transform: rotate(0);
        -ms-transform:rotate(0);
    }
}

@-webkit-keyframes anim-rotate-backward {
    from {
        -webkit-transform:rotate(360deg);
    }
    to {
        -webkit-transform:rotate(0);
    }
}

.spinner {
    display: inline-block;
    line-height: 1;
    animation: anim-rotate 2s infinite linear;
    -webkit-animation: anim-rotate 2s infinite linear;
    -moz-animation: anim-rotate 2s infinite linear;
    -o-animation: anim-rotate 2s infinite linear;
}

.backwardSpinner {
    display: inline-block;
    line-height: 1;
    animation: anim-rotate-backward 2s infinite linear;
    -webkit-animation: anim-rotate-backward 2s infinite linear;
    -moz-animation: anim-rotate-backward 2s infinite linear;
    -o-animation: anim-rotate-backward 2s infinite linear;
}

.loadingText {
    padding-left: 4px;
}

.feedbackWrapper {
    padding: 0 20px;
}

legend {
    margin-bottom: 10px;
}

.cancelFeedback {
    position: absolute;
    font-size: 28px;
    right: 20px;
    top: 10px;
}

.feedbackArea, input.feedbackEmail {
    width: 97%;
    display: block;
}

.sendButton {
    width: 100%;

}

.feedbackArea {
    height: 80px;
}


@media (max-width: 979px) {
    .navbar-fixed-top .navbar-inner {
        padding: 0;
    }
    .navbar .brand {
        padding-top: 0px;
        padding-bottom: 3px; //necessary to prevent bottom of y from being clipped by nav dropdown
    }
}

@media (min-width: 980px) {
    .container {
        padding-top: 66px;
    }

    .navbar .brand {
        padding-top: 3px;
        padding-right: 40px;
    }

    .signInContainer, .username {
        margin-top: 9px;
    }
}

@media (max-width: 767px) {
    body {
        padding-left: 10px;
        padding-right: 10px;
    }
}

@media (min-width: 768px) {
    .tweet {
        padding-bottom: 0;
    }

    .voteButtons {
        margin-top: 1px; // because 'perfect' alignment of voteButtons and tweet actually makes voteButtons look higher
        border-top: $tweet-border-dotted;
    }

    .tweet:hover > .voteButtons, .tweet:hover > .tweetStuff {
        background-color: $tweet-background-hover-color !important;
    }

    .tweetStuff {
        border-top: $tweet-border-solid;
        border-left: $tweet-border-solid;
        border-right: $tweet-border-solid;
        border-bottom: 0;
    }

    .lastTweet {
        border-bottom: $tweet-border-solid;
    }

    .voteAye, .voteNay {
        display: block;
        width: 100%;
    }

    .voteAye {
        border-right: 0;
        border-bottom: $tweet-border-dotted;
    }

    a:hover > .voteAye, a:hover > .voteNay,
    a:focus > .voteAye, a:focus > .voteNay {
        background-color: #e4d8ed;
    }

    .signIn {
        font-size: 14px;
    }

    .feedback {
        display: inline;
    }
}

